
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buf ;
typedef int FILE ;


 int fclose (int *) ;
 scalar_t__ fgets (char*,int,int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 scalar_t__ isspace (char) ;
 int printf (char*,...) ;
 int strcpy (char*,char*) ;

int main(int argc, char *argv[])
{
 FILE *fi, *fo;
 char buf[256];

 if (argc != 3) {
  printf("usage:\n%s <carthw.cfg> <carthw.c>\n", argv[0]);
  return 1;
 }

 fi = fopen(argv[1], "r");
 fo = fopen(argv[2], "w");
 if (fi == ((void*)0) || fo == ((void*)0)) {
  printf("fopen failed\n");
  return 1;
 }

 fprintf(fo, "/* generated by %s, do not modify */\n", argv[0]);
 fprintf(fo, "static const char builtin_carthw_cfg[] =\n");

 while ((fgets(buf, sizeof(buf), fi)))
 {
  char bufd[256];
  char *d = bufd, *p = buf;
  int quote = 0;

  while (*p && isspace(*p))
   p++;

  if (*p == 0 || *p == '#')
   continue;


  if (*p == '[')
   strcpy(p, "[]");

  for (; *p != 0; p++) {
   if (!quote && isspace(*p))
    continue;
   if (*p == '"') {
    quote = !quote;
    *d++ = '\\';
   }
   *d++ = *p;
  }
  *d = 0;


  fprintf(fo, "  \"%s\\n\"\n", bufd);
 }

 fprintf(fo, ";\n");

 fclose(fi);
 fclose(fo);

 return 0;
}
